# moonlight-embedded

./: CMakeLists.txt
docs/: CMakeLists.txt  README.pod
freebsd-port/: Makefile  distinfo
freebsd-port/files/: patch-CMakeLists.txt  patch-docs_README.pod  patch-libgamestream_CMakeLists.txt  patch-src_config.c  patch-src_config.h  patch-src_input_evdev.c  patch-src_input_evdev.h  patch-src_input_mapping.c  patch-src_input_udev.c  patch-src_input_x11.c  patch-src_input_x11.h  patch-src_loop.c  patch-src_loop.h  patch-src_main.c  patch-src_platform.c  patch-src_video_egl.c  patch-src_video_egl.h  patch-src_video_egl__glsl.h  patch-src_video_ffmpeg.c  patch-src_video_ffmpeg.h  patch-src_video_ffmpeg__vaapi.c  patch-src_video_ffmpeg__vaapi.h  patch-src_video_ffmpeg__vaapi__egl.h  patch-src_video_pc.c  patch-src_video_video.h  patch-src_video_wayland.c  patch-src_video_wayland.h  patch-src_video_wlr-output-management.c  patch-src_video_wlr-output-management.h  patch-src_video_x11.c  patch-src_video_x11.h  patch-third__party_moonlight-common-c_src_Limelight.h  patch-third__party_moonlight-common-c_src_RtspConnection.c  patch-third__party_moonlight-common-c_src_SdpGenerator.c
libgamestream/: CMakeLists.txt  client.c  client.h  http.c  mkcert.c
src/: config.c  config.h  connection.c  cpu.c  loop.c  loop.h  main.c  platform.c  platform.h  util.c  util.h
src/input/: evdev.c  evdev.h  mapping.c  udev.c  x11.c  x11.h
src/video/: convert.c  convert.h  display.h  drm.c  drm.h  drm_base.c  drm_base.h  drm_base_ffmpeg.h  egl.c  egl.c.bak  egl.h  egl_glsl.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_filter.h  ffmpeg_vaapi.c  ffmpeg_vaapi.h  ffmpeg_vaapi_egl.h  ffmpeg_vaapi_x11.h  gbm.c  gbm.h  pc.c  render.h  sdl.c  sws.c  sws.h  video.h  video_internal.h  wayland.c  wayland.h  x11.c  x11.h
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/: 0001-yuv444-commit.patch
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src/: nvhttp.cpp  rtsp.cpp  video.cpp  video.h  video_colorspace.cpp
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src/platform/: common.h
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src/platform/windows/: display_vram.cpp
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src_assets/linux/shaders/opengl/: ConvertYUV.frag
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src_assets/windows/assets/shaders/directx/: convert_vuya_planar_ps.hlsl  convert_vuya_planar_ps_linear.hlsl  convert_vuya_planar_ps_perceptual_quantizer.hlsl  convert_yuv444_planar_yuv_ps.hlsl  convert_yuv444_planar_yuv_ps_linear.hlsl  convert_yuv444_planar_yuv_ps_perceptual_quantizer.hlsl
sunshine-0.23.1.f4f343b.dirty-yuv444_commit/src_assets/windows/assets/shaders/directx/include/: convert_vuya_planar_ps_base.hlsl  convert_yuv444_planar_yuv_ps_base.hlsl
